[package]
name = "bin"
version = "1.0.3"
description = "a paste bin."
repository = "https://github.com/w4/bin"
license = "WTFPL OR 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2018"

[dependencies]
argh = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
owning_ref = "0.4"
linked-hash-map = "0.5"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8" }
gpw = "0.1"

actix = "0.12"
actix-web = "3.3"

htmlescape = "0.3"
askama = "0.11"
syntect = "4.6"

tokio = { version = "1.15", features = ["sync"] }
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[badges]
travis-ci = { repository = "w4/bin" }
is-it-maintained-issue-resolution = { repository = "w4/bin" }
is-it-maintained-open-issues = { repository = "w4/bin" }
maintenance = { status = "passively-maintained" }
